# freetoon-lvgl

./: README.md  install.sh
docs/: topicstart_nl.md
lvgl_ui_recovered/src/: Makefile  bootpick.c  bootpick.h  boxtalk.c  client_link.c  client_link.h  homeassistant.c  homeassistant.h  main.c  pwa_server.c  screen_dim.c  screen_home.c  screen_layout_editor.c  screen_settings.c  settings.c  settings.h  sim.c  toon1_touch.c  weather.c  weather.h
scripts/: Connect-ToonTailscale.ps1  companion_gate.sh  connect_toon_tailscale.sh  toon-selfinstall.sh  toon_tailscale.sh  ui_launcher.sh
web/: CMakeLists.txt
